--- a/src/Words.css
+++ b/src/Words.css
@@ -1,6 +1,12 @@
 #test {
     font-size: xx-large;
 }
+
+#rose {
+    width: 30%;
+    text-align: center;
+    
+}
  
 
 @media (min-width: 576px) {
