--- a/src/components/Words/Words.css
+++ b/src/components/Words/Words.css
@@ -27,6 +27,12 @@ button:focus,
     box-shadow: 0 0 0 0 rgba(0,123,255,0)!important;
 }
 
+.bi-bookmark-star {
+    position: absolute;
+    top: 4px;
+    right: 8px;
+}
+
 button:active {
    opacity: 80%;
 }
