--- a/client/src/components/Words/Words.css
+++ b/client/src/components/Words/Words.css
@@ -27,10 +27,14 @@ button:focus,
     box-shadow: 0 0 0 0 rgba(0,123,255,0)!important;
 }
 
-.bi-bookmark-star {
-    position: absolute;
-    top: 4px;
-    right: 8px;
+.dropdown {
+    position: absolute!important;
+    top: 8px;
+    right: 4px;
+}
+
+.bi::before {
+    padding: 5px;
 }
 
 button:active {
